applicantsTable 30%
